06-cc-movimientos-ms/kubernetes/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cc-movimientos-ms-ingress
  namespace: cc-movimientos-ms-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: portal.banco.local
      http:
        paths:
          - path: /cc-movimientos
            pathType: Prefix
            backend:
              service:
                name: cc-movimientos-ms-svc
                port:
                  number: 80
